; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_monotonic_x86_64.c_mt_microstackshot_start_arch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_monotonic_x86_64.c_mt_microstackshot_start_arch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mt_core_supported = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4
@CTR_MAX = common dso_local global i64 0, align 8
@mt_core_reset_values = common dso_local global i64* null, align 8
@mt_microstackshot_ctr = common dso_local global i64 0, align 8
@CPUMASK_ALL = common dso_local global i32 0, align 4
@ASYNC = common dso_local global i32 0, align 4
@mt_microstackshot_start_remote = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mt_microstackshot_start_arch(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32, i32* @mt_core_supported, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @ENOTSUP, align 4
  store i32 %7, i32* %2, align 4
  br label %19

8:                                                ; preds = %1
  %9 = load i64, i64* @CTR_MAX, align 8
  %10 = load i64, i64* %3, align 8
  %11 = sub nsw i64 %9, %10
  %12 = load i64*, i64** @mt_core_reset_values, align 8
  %13 = load i64, i64* @mt_microstackshot_ctr, align 8
  %14 = getelementptr inbounds i64, i64* %12, i64 %13
  store i64 %11, i64* %14, align 8
  %15 = load i32, i32* @CPUMASK_ALL, align 4
  %16 = load i32, i32* @ASYNC, align 4
  %17 = load i32, i32* @mt_microstackshot_start_remote, align 4
  %18 = call i32 @mp_cpus_call(i32 %15, i32 %16, i32 %17, i32* null)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %8, %6
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @mp_cpus_call(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
